cpp/src/tiledb/cxx_api/tiledb.h


TILEDB_EXPORT int32_t
tiledb_filesystem_to_str(tiledb_filesystem_t filesystem, const char** str);
TILEDB_EXPORT int32_t
tiledb_filesystem_from_str(const char* str, tiledb_filesystem_t* filesystem);
TILEDB_EXPORT int32_t
tiledb_datatype_to_str(tiledb_datatype_t datatype, const char** str);
TILEDB_EXPORT int32_t
tiledb_datatype_from_str(const char* str, tiledb_datatype_t* datatype);
TILEDB_EXPORT int32_t
tiledb_filter_type_to_str(tiledb_filter_type_t filter_type, const char** str);
TILEDB_EXPORT int32_t
tiledb_filter_type_from_str(const char* str, tiledb_filter_type_t* filter_type);
TILEDB_EXPORT int32_t tiledb_filter_option_to_str(
    tiledb_filter_option_t filter_option, const char** str);
TILEDB_EXPORT int32_t tiledb_filter_option_from_str(
    const char* str, tiledb_filter_option_t* filter_option);
TILEDB_EXPORT uint64_t tiledb_datatype_size(tiledb_datatype_t type);
typedef struct tiledb_config_t tiledb_config_t;
typedef struct tiledb_config_iter_t tiledb_config_iter_t;
typedef struct tiledb_ctx_t tiledb_ctx_t;
typedef struct tiledb_error_t tiledb_error_t;
typedef struct tiledb_filter_t tiledb_filter_t;
typedef struct tiledb_filter_list_t tiledb_filter_list_t;
typedef struct tiledb_query_t tiledb_query_t;
typedef struct tiledb_vfs_t tiledb_vfs_t;
TILEDB_EXPORT int32_t
tiledb_error_message(tiledb_error_t* err, const char** errmsg);
TILEDB_EXPORT void tiledb_error_free(tiledb_error_t** err);
TILEDB_EXPORT int32_t
tiledb_config_alloc(tiledb_config_t** config, tiledb_error_t** error);
TILEDB_EXPORT void tiledb_config_free(tiledb_config_t** config);
TILEDB_EXPORT int32_t tiledb_config_set(
    tiledb_config_t* config,
    const char* param,
    const char* value,
    tiledb_error_t** error);
TILEDB_EXPORT int32_t tiledb_config_get(
    tiledb_config_t* config,
    const char* param,
    const char** value,
    tiledb_error_t** error);
TILEDB_EXPORT int32_t tiledb_config_load_from_file(
    tiledb_config_t* config, const char* filename, tiledb_error_t** error);
TILEDB_EXPORT int32_t tiledb_config_unset(
    tiledb_config_t* config, const char* param, tiledb_error_t** error);
TILEDB_EXPORT int32_t tiledb_config_save_to_file(
    tiledb_config_t* config, const char* filename, tiledb_error_t** error);
TILEDB_EXPORT int32_t tiledb_config_compare(
    tiledb_config_t* lhs, tiledb_config_t* rhs, uint8_t* equal);
TILEDB_EXPORT int32_t tiledb_config_iter_alloc(
    tiledb_config_t* config,
    const char* prefix,
    tiledb_config_iter_t** config_iter,
    tiledb_error_t** error);
TILEDB_EXPORT int32_t tiledb_config_iter_reset(
    tiledb_config_t* config,
    tiledb_config_iter_t* config_iter,
    const char* prefix,
    tiledb_error_t** error);
TILEDB_EXPORT void tiledb_config_iter_free(tiledb_config_iter_t** config_iter);
TILEDB_EXPORT int32_t tiledb_config_iter_here(
    tiledb_config_iter_t* config_iter,
    const char** param,
    const char** value,
    tiledb_error_t** error);
TILEDB_EXPORT int32_t tiledb_config_iter_next(
    tiledb_config_iter_t* config_iter, tiledb_error_t** error);
TILEDB_EXPORT int32_t tiledb_config_iter_done(
    tiledb_config_iter_t* config_iter, int32_t* done, tiledb_error_t** error);
TILEDB_EXPORT int32_t
tiledb_ctx_alloc(tiledb_config_t* config, tiledb_ctx_t** ctx);
TILEDB_EXPORT void tiledb_ctx_free(tiledb_ctx_t** ctx);
TILEDB_EXPORT int32_t
tiledb_ctx_get_stats(tiledb_ctx_t* ctx, char** stats_json);
TILEDB_EXPORT int32_t
tiledb_ctx_get_config(tiledb_ctx_t* ctx, tiledb_config_t** config);
TILEDB_EXPORT int32_t
tiledb_ctx_get_last_error(tiledb_ctx_t* ctx, tiledb_error_t** err);
TILEDB_EXPORT int32_t tiledb_ctx_is_supported_fs(
    tiledb_ctx_t* ctx, tiledb_filesystem_t fs, int32_t* is_supported);
TILEDB_EXPORT int32_t tiledb_ctx_cancel_tasks(tiledb_ctx_t* ctx);
TILEDB_EXPORT int32_t
tiledb_ctx_set_tag(tiledb_ctx_t* ctx, const char* key, const char* value);
TILEDB_EXPORT int32_t tiledb_filter_alloc(
    tiledb_ctx_t* ctx, tiledb_filter_type_t type, tiledb_filter_t** filter);
TILEDB_EXPORT void tiledb_filter_free(tiledb_filter_t** filter);
TILEDB_EXPORT int32_t tiledb_filter_get_type(
    tiledb_ctx_t* ctx, tiledb_filter_t* filter, tiledb_filter_type_t* type);
TILEDB_EXPORT int32_t tiledb_filter_set_option(
    tiledb_ctx_t* ctx,
    tiledb_filter_t* filter,
    tiledb_filter_option_t option,
    const void* value);
TILEDB_EXPORT int32_t tiledb_filter_get_option(
    tiledb_ctx_t* ctx,
    tiledb_filter_t* filter,
    tiledb_filter_option_t option,
    void* value);
TILEDB_EXPORT int32_t
tiledb_filter_list_alloc(tiledb_ctx_t* ctx, tiledb_filter_list_t** filter_list);
TILEDB_EXPORT void tiledb_filter_list_free(tiledb_filter_list_t** filter_list);
TILEDB_EXPORT int32_t tiledb_filter_list_add_filter(
    tiledb_ctx_t* ctx,
    tiledb_filter_list_t* filter_list,
    tiledb_filter_t* filter);
TILEDB_EXPORT int32_t tiledb_query_submit_async(
    tiledb_ctx_t* ctx,
    tiledb_query_t* query,
    void (*callback)(void*),
    void* callback_data);
TILEDB_EXPORT int32_t tiledb_object_walk(
    tiledb_ctx_t* ctx,
    const char* path,
    tiledb_walk_order_t order,
    int32_t (*callback)(const char*, tiledb_object_t, void*),
    void* data);
TILEDB_EXPORT int32_t tiledb_object_ls(
    tiledb_ctx_t* ctx,
    const char* path,
    int32_t (*callback)(const char*, tiledb_object_t, void*),
    void* data);
TILEDB_EXPORT int32_t tiledb_vfs_ls(
    tiledb_ctx_t* ctx,
    tiledb_vfs_t* vfs,
    const char* path,
    int32_t (*callback)(const char*, void*),
    void* data);