sources/TileDB.CSharp/Interop/Methods.cs

// <auto-generated/>

using System;
using System.Runtime.InteropServices;

namespace TileDB.Interop
{
    internal static unsafe partial class Methods
    {
        [return: NativeTypeName("capi_status_t")]
        public static int tiledb_status([NativeTypeName("capi_return_t")] int x)
        {
            return x;
        }

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_status_t")]
        public static extern int tiledb_status_code([NativeTypeName("capi_return_t")] int x);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_datatype_to_str(tiledb_datatype_t datatype, [NativeTypeName("const char **")] sbyte** str);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_datatype_from_str([NativeTypeName("const char *")] sbyte* str, tiledb_datatype_t* datatype);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint64_t")]
        public static extern ulong tiledb_datatype_size(tiledb_datatype_t type);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_error_message(tiledb_error_t* err, [NativeTypeName("const char **")] sbyte** errmsg);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_error_free(tiledb_error_t** err);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_alloc(tiledb_config_t** config, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_config_free(tiledb_config_t** config);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_set(tiledb_config_t* config, [NativeTypeName("const char *")] sbyte* param1, [NativeTypeName("const char *")] sbyte* value, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_get(tiledb_config_t* config, [NativeTypeName("const char *")] sbyte* param1, [NativeTypeName("const char **")] sbyte** value, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_unset(tiledb_config_t* config, [NativeTypeName("const char *")] sbyte* param1, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_load_from_file(tiledb_config_t* config, [NativeTypeName("const char *")] sbyte* filename, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_save_to_file(tiledb_config_t* config, [NativeTypeName("const char *")] sbyte* filename, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_compare(tiledb_config_t* lhs, tiledb_config_t* rhs, [NativeTypeName("uint8_t *")] byte* equal);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_iter_alloc(tiledb_config_t* config, [NativeTypeName("const char *")] sbyte* prefix, tiledb_config_iter_t** config_iter, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_iter_reset(tiledb_config_t* config, tiledb_config_iter_t* config_iter, [NativeTypeName("const char *")] sbyte* prefix, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_config_iter_free(tiledb_config_iter_t** config_iter);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_iter_here(tiledb_config_iter_t* config_iter, [NativeTypeName("const char **")] sbyte** param1, [NativeTypeName("const char **")] sbyte** value, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_iter_next(tiledb_config_iter_t* config_iter, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_config_iter_done(tiledb_config_iter_t* config_iter, [NativeTypeName("int32_t *")] int* done, tiledb_error_t** error);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filesystem_to_str(tiledb_filesystem_t filesystem, [NativeTypeName("const char **")] sbyte** str);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filesystem_from_str([NativeTypeName("const char *")] sbyte* str, tiledb_filesystem_t* filesystem);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_ctx_alloc(tiledb_config_t* config, tiledb_ctx_t** ctx);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_ctx_free(tiledb_ctx_t** ctx);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_ctx_get_stats(tiledb_ctx_t* ctx, [NativeTypeName("char **")] sbyte** stats_json);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_ctx_get_config(tiledb_ctx_t* ctx, tiledb_config_t** config);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_ctx_get_last_error(tiledb_ctx_t* ctx, tiledb_error_t** err);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_ctx_is_supported_fs(tiledb_ctx_t* ctx, tiledb_filesystem_t fs, [NativeTypeName("int32_t *")] int* is_supported);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_ctx_cancel_tasks(tiledb_ctx_t* ctx);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_ctx_set_tag(tiledb_ctx_t* ctx, [NativeTypeName("const char *")] sbyte* key, [NativeTypeName("const char *")] sbyte* value);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filter_type_to_str(tiledb_filter_type_t filter_type, [NativeTypeName("const char **")] sbyte** str);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filter_type_from_str([NativeTypeName("const char *")] sbyte* str, tiledb_filter_type_t* filter_type);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filter_option_to_str(tiledb_filter_option_t filter_option, [NativeTypeName("const char **")] sbyte** str);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filter_option_from_str([NativeTypeName("const char *")] sbyte* str, tiledb_filter_option_t* filter_option);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filter_alloc(tiledb_ctx_t* ctx, tiledb_filter_type_t type, tiledb_filter_t** filter);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_filter_free(tiledb_filter_t** filter);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filter_get_type(tiledb_ctx_t* ctx, tiledb_filter_t* filter, tiledb_filter_type_t* type);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filter_set_option(tiledb_ctx_t* ctx, tiledb_filter_t* filter, tiledb_filter_option_t option, [NativeTypeName("const void *")] void* value);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filter_get_option(tiledb_ctx_t* ctx, tiledb_filter_t* filter, tiledb_filter_option_t option, void* value);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filter_list_alloc(tiledb_ctx_t* ctx, tiledb_filter_list_t** filter_list);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_filter_list_free(tiledb_filter_list_t** filter_list);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_filter_list_add_filter(tiledb_ctx_t* ctx, tiledb_filter_list_t* filter_list, tiledb_filter_t* filter);
